--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-599.0KB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.49MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-732.7KB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇺🇸 美国-352.2KB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 116.129.254.192, port: 16256, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: 116.129.254.192, port: 16296, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-419.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-647.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-596.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.79MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇩🇪 德国-584.6KB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-161.6KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: 116.129.254.192, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-302.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.60MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-581.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-599.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-732.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-419.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-647.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
