--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.79MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇩🇪 德国-584.6KB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-161.6KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: 116.129.254.192, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-302.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.60MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇺🇸 美国-581.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-782.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.03MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
+  - {name: 🇺🇸 美国-658.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: 116.129.254.192, port: 16251, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-513.4KB/s(Youtube:不良林), server: 120.241.236.215, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-584.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
