--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-581.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-782.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.03MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
-  - {name: 🇺🇸 美国-658.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: 116.129.254.192, port: 16251, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-513.4KB/s(Youtube:不良林), server: 120.241.236.215, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-3.62MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-352.2KB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.60MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-704.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-494.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.51MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-794.4KB/s(Youtube:不良林), server: vfly6.xyz, port: 443, type: vmess, uuid: f3b6fd11-4444-4efa-b19a-13ad22d0a782, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly6.xyz}}
+  - {name: 🇻🇳 越南-8.26MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-782.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-658.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.4KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-794.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
